--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Hoya's Deep Learning Study Blog
+title: Hoya012's Research Blog
 ---
 
 <div class="home" id="home">
-  <h1 class="pageTitle">Recent Posts</h1>
+  <h1 class="pageTitle"> Posts </h1>
   <ul class="posts noList">
     {% for post in paginator.posts %}
       <li>
